# starting-ragchatbot-codebase

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  ai_generator_anthropic.py  app.py  check_api_setup.py  config.py  improved_app.py  rag_system.py  search_tools.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_data_loading.py  test_openai_integration.py  test_rag_system.py  test_real_integration.py  test_search_tools.py  test_system_analysis.py
frontend/: index.html  script.js  style.css
scripts/: format-fix.sh  format.sh  lint.sh  quality.sh
